# misc-code

./: README.md
3Dmodeling/blender/: notes.md
ML/: README.md
ML/module3/: classification.md  hidden_markov_models.md  linear_regression.md
audio/: audacity.md  qjackctl.md
c_cpp/boost/: CMakeLists.txt  README.md  thread.cpp
c_cpp/boost/asio1/: server.cpp
c_cpp/cpp11_more/: CMakeLists.txt  README.md  lambda.cpp  lambda2.cpp  rvo_test.cpp
c_cpp/cpp11_more/algorithm/: README.md  binary_search.cpp  copymove.cpp  heap.cpp  merge.cpp  minmax.cpp  partition.cpp  rval_vector.cpp  sort_lambda.cpp
c_cpp/eigen/: CMakeLists.txt
c_cpp/encoding/: CMakeLists.txt
c_cpp/io_cpp/: CMakeLists.txt
c_cpp/misc/: CMakeLists.txt  ctime_prac.cpp  operator.cpp  private_virtual.cpp  two_map_key.cpp
c_cpp/multithread/: CMakeLists.txt  pthread_thread.cpp  std_thread2.cpp
c_cpp/multithread/openmp/: CMakeLists.txt  openmp.cpp  openmp_for.cpp
c_cpp/nlohmann_json/: CMakeLists.txt  README.md  json_prac.cpp
c_cpp/noncanonical/: CMakeLists.txt
c_cpp/octomap/: CMakeLists.txt  analyze.cpp  prac.cpp  raycast.cpp
c_cpp/opencv/: CMakeLists.txt  cov_info_mat.cpp  prac_matrix.cpp  prac_tm.cpp
c_cpp/pcl/: CMakeLists.txt  README.md  cloudcompare.md  pcd_write.cpp  pcl_prac.cpp  pcl_prac2.cpp  pcl_prac3.cpp  pcl_prac4.cpp
c_cpp/pointers/: CMakeLists.txt
c_cpp/protobuf/: CMakeLists.txt
c_cpp/protobuf/proto/: CMakeLists.txt
c_cpp/qt/: README.md
c_cpp/socket/: CMakeLists.txt
c_cpp/ssl/: CMakeLists.txt
c_cpp/xls/: CMakeLists.txt  README.md
cmake_prac/include/: foo.h
docker/: notes.md
docker/personal_environment/: build.bash  run.bash
docker/personal_environment/scripts/: run_app.bash  start_container.bash
docker/personal_environment/tidota-personal/: Dockerfile
docker/personal_environment/ubuntu-personal/: Dockerfile
docker/ros1-kinetic-amd/: run.bash
docker/ros1-kinetic-amd/ros-kinetic-gazebo7-amd/: Dockerfile
docker/ros1-noetic/: README.md
docker/ros1-noetic/ros-noetic/: Dockerfile
docker/ros2-foxy/: README.md  run.bash
docker/ros2-foxy/ros2-foxy/: Dockerfile
docker/ros2-humble-ign/: README.md
docker/ros2-humble-ign/ros2-humble-ign/: Dockerfile
electronics/: README.md
electronics/simulation/: README.md
gravtest/: CMakeLists.txt  Makefile  analysis.ods  gravtest.cpp  notes
gtest/: CMakeLists.txt
java/jni/: DBWrapper.cpp  User.java
java/template/: Temp.java
javascript/basics/: README.md
javascript/basics/asynchronous/: index.html
javascript/basics/outputs/: functions.js  index.html
javascript/node_prac/: index.js
js_ts/javascript/: README.md
js_ts/javascript/asynchronous/: functions.js
js_ts/javascript/events/: index.html
js_ts/nodejs/: demofile1.html
js_ts/react/: README.md
js_ts/react/my-react-app/: package-lock.json
js_ts/typescript/: README.md
js_ts/typescript/practice/: tsconfig.json
misc_notes/3Dmodeling/blender/: notes.md
misc_notes/c_cpp/: CMakeLists.txt
misc_notes/c_cpp/encoding/: CMakeLists.txt  Makefile  base64_dec.cpp
misc_notes/c_cpp/multithread/: CMakeLists.txt  Makefile
misc_notes/shell/: ToMakeGifAnime.md  gdb_cheetsheet.ipynb  unixcoms.md
python/fracexp/: convolution-multiplication.ipynb  direct_reduction.ipynb  kde.ipynb  random_vs_average.ipynb  simplest_sim.ipynb  simplest_sim_really.ipynb
python/rand/: rand.py
really_miscellaneous/: test_pt.c
really_miscellaneous/cpp11_more/: shared.cpp
really_miscellaneous/int_swap/: int_swap.py
really_miscellaneous/multithread/: Makefile  std_thread.cpp
really_miscellaneous/noncanonical/: noncanonical.cpp
really_miscellaneous/pointers/: Makefile  array1d2d.c
really_miscellaneous/scripts/: for_all_files.sh
really_miscellaneous/smart_ptr/: lambda.cpp  reference_wrapper.cpp  tuple.cpp  unique.cpp
really_miscellaneous/socket/: Makefile  client.c  server.c
ros_gazebo/: TODO.md  misc.md
ros_gazebo/ros2_prac/: README.md
ros_gazebo/turtlebot2/: README.md  my_map.pgm
ros_gazebo/turtlebot3/: README.md  comp.md  foxy.md  melodic.md  ros1.md  ros2.md
ruby/: test.rb
rust/: README.md
rust/guess/src/: main.rs
shell/: binary_file.md  morse.md  perf_cheetsheet.md  unixcoms.md  vi_vim.md
shell/gdb/: gdb_cheetsheet.md  ubuntu.md
shell/git/: notes.md
shell/vpn/: README.md
snippets/c_cpp/: CMakeLists.txt
snippets/c_cpp/boost/: CMakeLists.txt  PREPARATION.md  hello.cpp
snippets/c_cpp/boost/asio2/: CMakeLists.txt
snippets/c_cpp/cpp11_more/: allany.cpp  lambda.cpp
snippets/c_cpp/cpp11_more/algorithm/: CMakeLists.txt  README.md  filletc.cpp  forfind.cpp  lexicograph.cpp  rval_vector.cpp  sort.cpp
snippets/c_cpp/eigen/: CMakeLists.txt  prac.cpp
snippets/c_cpp/gsl/: CMakeLists.txt  prac.cpp  prac_eigen.cpp
snippets/c_cpp/io_cpp/: ignore.cpp
snippets/c_cpp/misc/: CMakeLists.txt  rule_of_5.cpp
snippets/c_cpp/multithread/: CMakeLists.txt  std_thread.cpp
snippets/c_cpp/multithread/openmp/: CMakeLists.txt  openmp.cpp
snippets/c_cpp/noncanonical/: Makefile
snippets/c_cpp/octomap/: CMakeLists.txt  README.md  prac.cpp
snippets/c_cpp/opencv/: CMakeLists.txt  README.md  prac1.cpp  prac_image_proc.cpp
snippets/c_cpp/pcl/: CMakeLists.txt  pcl2_prac.cpp  pcl_prac.cpp  pcl_prac3.cpp
snippets/c_cpp/pointers/: Makefile
snippets/c_cpp/protobuf/: CMakeLists.txt  prac.cpp  test.cpp
snippets/c_cpp/protobuf/proto/: CMakeLists.txt  int.proto  intlist.proto  str.proto
snippets/c_cpp/socket/: client.c  server.c
snippets/c_cpp/ssl/: CMakeLists.txt
snippets/c_cpp/xls/: CMakeLists.txt  test_xlnt.cpp
snippets/cmake_prac/: CMakeLists.txt
snippets/gtest/: README.md  test1.cpp
snippets/java/jni/: .gitignore  CMakeLists.txt  DBWrapper.cpp  README.md  User.h  User.java  database.cpp  database.h  loader.cpp  loader.h  sample.cpp  wrapper.cpp
snippets/shell/: for_all_files.sh  scripts.md  unixcoms.md
ssl/: Makefile  sha_test.cpp
text-to-speech/: notes.md
wastedris/: Makefile  format_macro.hpp  game_core.cpp  game_core.hpp  wastedris.cpp
wastetris/: Makefile  format_macro.hpp  game_core.cpp  game_core.hpp  wastetris.cpp
(+49 files in other folders)
