include(FindProtobuf)
find_package(Protobuf REQUIRED)
include_directories(${PROTOBUF_INCLUDE_DIR})
file(GLOB PROTO_FILES *.proto)
foreach (prt ${PROTO_FILES})
  get_filename_component(target ${prt} NAME_WE)
  protobuf_generate_cpp(PROTO_SRC PROTO_HEADER ${prt})
  add_library(${target} ${PROTO_HEADER} ${PROTO_SRC})
  set(PROTOBUF_LIBRARY "${PROTOBUF_LIBRARY} ${target}" PARENT_SCOPE)
endforeach ()
